# Mavinci

./: CMakeLists.txt  README.md  wd
client-sync/: CMakeLists.txt  http_client_sync.cpp
common/: common_define.h  console.h  http_service.h  light_sensor.h  temperature_sensor.h
server/: CMakeLists.txt  main.cpp
server-sync/: CMakeLists.txt  http_server_sync.cpp
sync/: CMakeLists.txt
